exprsParser.py
# Generated from exprs.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class exprsParser ( Parser ):

    grammarFileName = "exprs.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'\\'", "'->'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "ID", "WS", "PLUS", "MINUS", 
                      "MULT", "DIV" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_expr2 = 2
    RULE_expr3 = 3
    RULE_lambdaExpr = 4
    RULE_infixExprComp = 5
    RULE_infixExpr = 6
    RULE_operador = 7

    ruleNames =  [ "root", "expr", "expr2", "expr3", "lambdaExpr", "infixExprComp", 
                   "infixExpr", "operador" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    NUMBER=5
    ID=6
    WS=7
    PLUS=8
    MINUS=9
    MULT=10
    DIV=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def EOF(self):
            return self.getToken(exprsParser.EOF, 0)

        def getRuleIndex(self):
            return exprsParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = exprsParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.expr()
            self.state = 17
            self.match(exprsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OperacioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def infixExprComp(self):
            return self.getTypedRuleContext(exprsParser.InfixExprCompContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacio" ):
                return visitor.visitOperacio(self)
            else:
                return visitor.visitChildren(self)


    class ExpresioLambdaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lambdaExpr(self):
            return self.getTypedRuleContext(exprsParser.LambdaExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresioLambda" ):
                return visitor.visitExpresioLambda(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr3(self):
            return self.getTypedRuleContext(exprsParser.Expr3Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class NumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr2(self):
            return self.getTypedRuleContext(exprsParser.Expr2Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum" ):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)


    class FuncionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lambdaExpr(self):
            return self.getTypedRuleContext(exprsParser.LambdaExprContext,0)

        def expr2(self):
            return self.getTypedRuleContext(exprsParser.Expr2Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)


    class OperacioincompletaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def infixExpr(self):
            return self.getTypedRuleContext(exprsParser.InfixExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacioincompleta" ):
                return visitor.visitOperacioincompleta(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = exprsParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 29
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = exprsParser.ExpresioLambdaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.lambdaExpr()
                pass

            elif la_ == 2:
                localctx = exprsParser.OperacioincompletaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.infixExpr()
                pass

            elif la_ == 3:
                localctx = exprsParser.OperacioContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 21
                self.infixExprComp()
                pass

            elif la_ == 4:
                localctx = exprsParser.FuncionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 22
                self.match(exprsParser.T__0)
                self.state = 23
                self.lambdaExpr()
                self.state = 24
                self.match(exprsParser.T__1)
                self.state = 25
                self.expr2()
                pass

            elif la_ == 5:
                localctx = exprsParser.NumContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 27
                self.expr2()
                pass

            elif la_ == 6:
                localctx = exprsParser.VarContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 28
                self.expr3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_expr2

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumeroContext(Expr2Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.Expr2Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(exprsParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)



    def expr2(self):

        localctx = exprsParser.Expr2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr2)
        try:
            localctx = exprsParser.NumeroContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(exprsParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_expr3

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VariableContext(Expr3Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.Expr3Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(exprsParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)



    def expr3(self):

        localctx = exprsParser.Expr3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr3)
        try:
            localctx = exprsParser.VariableContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(exprsParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_lambdaExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LambdafuncContext(LambdaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.LambdaExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr3(self):
            return self.getTypedRuleContext(exprsParser.Expr3Context,0)

        def infixExprComp(self):
            return self.getTypedRuleContext(exprsParser.InfixExprCompContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdafunc" ):
                return visitor.visitLambdafunc(self)
            else:
                return visitor.visitChildren(self)



    def lambdaExpr(self):

        localctx = exprsParser.LambdaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lambdaExpr)
        try:
            localctx = exprsParser.LambdafuncContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(exprsParser.T__2)
            self.state = 36
            self.expr3()
            self.state = 37
            self.match(exprsParser.T__3)
            self.state = 38
            self.infixExprComp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfixExprCompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_infixExprComp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OperaciobinariaContext(InfixExprCompContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InfixExprCompContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def infixExpr(self):
            return self.getTypedRuleContext(exprsParser.InfixExprContext,0)

        def expr2(self):
            return self.getTypedRuleContext(exprsParser.Expr2Context,0)

        def expr3(self):
            return self.getTypedRuleContext(exprsParser.Expr3Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperaciobinaria" ):
                return visitor.visitOperaciobinaria(self)
            else:
                return visitor.visitChildren(self)



    def infixExprComp(self):

        localctx = exprsParser.InfixExprCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_infixExprComp)
        try:
            localctx = exprsParser.OperaciobinariaContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.infixExpr()
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.state = 41
                self.expr2()
                pass
            elif token in [6]:
                self.state = 42
                self.expr3()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfixExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_infixExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OperaciounariaContext(InfixExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InfixExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operador(self):
            return self.getTypedRuleContext(exprsParser.OperadorContext,0)

        def expr2(self):
            return self.getTypedRuleContext(exprsParser.Expr2Context,0)

        def expr3(self):
            return self.getTypedRuleContext(exprsParser.Expr3Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperaciounaria" ):
                return visitor.visitOperaciounaria(self)
            else:
                return visitor.visitChildren(self)



    def infixExpr(self):

        localctx = exprsParser.InfixExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_infixExpr)
        try:
            localctx = exprsParser.OperaciounariaContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(exprsParser.T__0)
            self.state = 46
            self.operador()
            self.state = 47
            self.match(exprsParser.T__1)
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.state = 48
                self.expr2()
                pass
            elif token in [6]:
                self.state = 49
                self.expr3()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(exprsParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(exprsParser.MINUS, 0)

        def MULT(self):
            return self.getToken(exprsParser.MULT, 0)

        def DIV(self):
            return self.getToken(exprsParser.DIV, 0)

        def getRuleIndex(self):
            return exprsParser.RULE_operador

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperador" ):
                return visitor.visitOperador(self)
            else:
                return visitor.visitChildren(self)




    def operador(self):

        localctx = exprsParser.OperadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





